--- a/index.html
+++ b/index.html
@@ -1,7 +1,43 @@
----
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
-author_profile: true
----
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sito web vetrina di [Il Tuo Nome], dottorando in Ingegneria Informatica presso UniSannio.">
+    <title>Home - [Il Tuo Nome]</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+</head>
+<body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">[Il Tuo Nome]</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="about.html">Chi Sono</a></li>
+                    <li class="nav-item"><a class="nav-link" href="research.html">Ricerca</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">Progetti</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contatti</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <header class="text-center py-5 bg-light">
+        <div class="container">
+            <h1>Benvenuto nel mio sito!</h1>
+            <p class="lead">Sono [Il Tuo Nome], dottorando in Ingegneria Informatica presso UniSannio.</p>
+        </div>
+    </header>
+
+    <!-- Footer -->
+    <footer class="text-center py-4 bg-dark text-white">
+        <p>© [Anno] [Il Tuo Nome] - Tutti i diritti riservati</p>
+    </footer>
+</body>
+</html>
