--- a/index.html
+++ b/index.html
@@ -78,20 +78,23 @@
             <h2>Contacts</h2>
 
             <div class="d-flex justify-content-center mb-4">
-                <a href="https://x.com/tuoprofilo" target="_blank" class="me-3">
-                    <i class="fab fa-twitter" style="font-size: 40px; color: #1da1f2;"></i>
+                <a href="https://x.com/BifolcoDaniele" target="_blank" class="me-3">
+                    <i class="fa-brands fa-x-twitter" style="font-size: 40px; color: #1da1f2;" alt="X-Twitter"></i>
                 </a>
-                <a href="https://linkedin.com/in/tuoprofilo" target="_blank" class="me-3">
-                    <i class="fab fa-linkedin" style="font-size: 40px; color: #0077b5;"></i>
+                <a href="www.linkedin.com/in/daniele-bifolco" target="_blank" class="me-3">
+                    <i class="fab fa-linkedin" style="font-size: 40px; color: #0077b5;" alt="LinkedIn"></i>
                 </a>
                 <a href="https://www.scopus.com/authid/detail.uri?authorId=tuoId" target="_blank" class="me-3">
-                    <i class="fas fa-book" style="font-size: 40px; color: #ff6f61;"></i>
+                    <img src="assets/images/assets/images/Elsevier.png" alt="Scoups" style="height: 40px; width: 40px;">
                 </a>
-                <a href="https://scholar.google.com/citations?user=tuoId" target="_blank" class="me-3">
-                    <i class="fas fa-graduation-cap" style="font-size: 40px; color: #4285f4;"></i>
+                <a href="https://scholar.google.com/citations?user=DyBfcIEAAAAJ&hl=it" target="_blank" class="me-3">
+                    <i class="fas fa-book" style="font-size: 40px; color: #ff6f61;" alt="Google Scholar"></i>
+                </a>
+                <a href="https://www.unisannio.it/it/users/daniele-bifolco" target="_blank" class="me-3">
+                    <i class="fas fa-graduation-cap" style="font-size: 40px; color: #4285f4;" alt="Unisannio"></i>
                 </a>
                 <a href="https://dblp.org/pid/tuoId" target="_blank">
-                    <i class="fas fa-database" style="font-size: 40px; color: #f39c12;"></i>
+                    <i class="fas fa-database" style="font-size: 40px; color: #f39c12;" alt="dblp"></i>
                 </a>
 
             </div>
