--- a/index.html
+++ b/index.html
@@ -79,21 +79,24 @@
 
             <div class="d-flex justify-content-center mb-4">
                 <a href="https://x.com/BifolcoDaniele" target="_blank" class="me-3">
-                    <i class="fa-brands fa-x-twitter" style="font-size: 40px; color: #1da1f2;" alt="X-Twitter"></i>
+                    <i class="fa-brands fa-x-twitter" style="font-size: 40px;" alt="X-Twitter"></i>
                 </a>
                 <a href="www.linkedin.com/in/daniele-bifolco" target="_blank" class="me-3">
                     <i class="fab fa-linkedin" style="font-size: 40px; color: #0077b5;" alt="LinkedIn"></i>
                 </a>
-                <a href="https://www.scopus.com/authid/detail.uri?authorId=tuoId" target="_blank" class="me-3">
-                    <img src="assets/images/assets/images/Elsevier.png" alt="Scoups" style="height: 40px; width: 40px;">
+                <a href="https://www.researchgate.net/profile/Daniele-Bifolco" target="_blank" class="me-3">
+                    <i class="fa-brands fa-researchgate" style="font-size: 40px;" alt="ResearchGate"></i>
+                </a>
+                <a href="https://www.scopus.com/authid/detail.uri?authorId=59202267400" target="_blank" class="me-3">
+                    <img src="assets/images/scopus.svg" alt="Scoups" style="height: 40px; width: 40px;">
                 </a>
                 <a href="https://scholar.google.com/citations?user=DyBfcIEAAAAJ&hl=it" target="_blank" class="me-3">
-                    <i class="fas fa-book" style="font-size: 40px; color: #ff6f61;" alt="Google Scholar"></i>
+                    <i class="fa-brands fa-google-scholar" style="font-size: 40px;" alt="Google Scholar"></i>
                 </a>
                 <a href="https://www.unisannio.it/it/users/daniele-bifolco" target="_blank" class="me-3">
                     <i class="fas fa-graduation-cap" style="font-size: 40px; color: #4285f4;" alt="Unisannio"></i>
                 </a>
-                <a href="https://dblp.org/pid/tuoId" target="_blank">
+                <a href="https://dblp.org/pid/378/0221.html" target="_blank">
                     <i class="fas fa-database" style="font-size: 40px; color: #f39c12;" alt="dblp"></i>
                 </a>
 
