--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     <!-- Hero Section -->
     <header class="text-center py-5 bg-primary text-white" id="hero">
         <div class="container" data-aos="fade-up">
+            <div class="text-center mb-4">
+                <img src="assets/images/E99CC044-5E36-4025-9F87-F551C96B153C-PhotoRoom-3.png" alt="Foto di [Il Tuo Nome]" class="rounded-circle" style="width: 300; height: 300px; object-fit: cover; border: 3px solid #006ee4;">
+            </div>
             <h1>Benvenuto!</h1>
             <p class="lead">Sono [Il Tuo Nome], dottorando in Ingegneria Informatica presso UniSannio.</p>
         </div>
@@ -79,13 +82,13 @@
 
             <div class="d-flex justify-content-center mb-4">
                 <a href="https://x.com/BifolcoDaniele" target="_blank" class="me-3">
-                    <i class="fa-brands fa-x-twitter" style="font-size: 40px;" alt="X-Twitter"></i>
+                    <img src="assets/images/square-x-twitter-brands-solid.svg" alt="Scoups" style="height: 40px; width: 40px;">
                 </a>
                 <a href="www.linkedin.com/in/daniele-bifolco" target="_blank" class="me-3">
                     <i class="fab fa-linkedin" style="font-size: 40px; color: #0077b5;" alt="LinkedIn"></i>
                 </a>
                 <a href="https://www.researchgate.net/profile/Daniele-Bifolco" target="_blank" class="me-3">
-                    <i class="fa-brands fa-researchgate" style="font-size: 40px;" alt="ResearchGate"></i>
+                    <img src="assets/images/researchgate-brands-solid.svg" alt="Scoups" style="height: 40px; width: 40px;">
                 </a>
                 <a href="https://www.scopus.com/authid/detail.uri?authorId=59202267400" target="_blank" class="me-3">
                     <img src="assets/images/scopus.svg" alt="Scoups" style="height: 40px; width: 40px;">
