--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <header class="text-center py-5 bg-primary text-white" id="hero">
         <div class="container" data-aos="fade-up">
             <div class="text-center mb-4">
-                <img src="assets/images/E99CC044-5E36-4025-9F87-F551C96B153C-PhotoRoom-3.png" alt="Foto di [Il Tuo Nome]" class="rounded-circle" style="width: 300; height: 300px; object-fit: cover; border: 3px solid #006ee4;">
+                <img src="assets/images/E99CC044-5E36-4025-9F87-F551C96B153C-PhotoRoom-3.png" alt="Daniele" class="img-fluid rounded-circle mx-auto" style="width: 300; height: 300px; object-fit: cover; border: 3px solid #006ee4;">
             </div>
             <h1>Benvenuto!</h1>
             <p class="lead">Sono [Il Tuo Nome], dottorando in Ingegneria Informatica presso UniSannio.</p>
