--- a/index.html
+++ b/index.html
@@ -40,14 +40,31 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <header class="text-center py-5 bg-primary text-white" id="hero">
-        <div class="container" data-aos="fade-up">
-            <div class="text-center mb-4">
-                <img src="assets/images/E99CC044-5E36-4025-9F87-F551C96B153C-PhotoRoom-3.png" alt="Daniele" class="img-fluid rounded-circle mx-auto" style="width: 300; height: 300px; object-fit: cover; border: 3px solid #006ee4;">
+    <header id="hero">
+        <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/images/E99CC044-2.png" class="d-block w-100" alt="Slide 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/E99CC044.png" class="d-block w-100" alt="Slide 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/E99CC044-2.png" class="d-block w-100" alt="Slide 3">
+                </div>
             </div>
-            <h1>Benvenuto!</h1>
-            <p class="lead">Sono [Il Tuo Nome], dottorando in Ingegneria Informatica presso UniSannio.</p>
+            <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+            <div class="carousel-caption d-none d-md-block">
+                <h1>Benvenuto!</h1>
+                <p class="lead">Sono [Il Tuo Nome], dottorando in Ingegneria Informatica presso UniSannio.</p>
+            </div>
         </div>
     </header>
 
@@ -88,19 +105,19 @@
                     <i class="fab fa-linkedin" style="font-size: 40px; color: #0077b5;" alt="LinkedIn"></i>
                 </a>
                 <a href="https://www.researchgate.net/profile/Daniele-Bifolco" target="_blank" class="me-3">
-                    <img src="assets/images/researchgate-brands-solid.svg" alt="Scoups" style="height: 40px; width: 40px;">
+                    <img src="assets/images/researchgate-brands-solid.svg" alt="ResearchGate" style="height: 40px; width: 40px;">
                 </a>
                 <a href="https://www.scopus.com/authid/detail.uri?authorId=59202267400" target="_blank" class="me-3">
                     <img src="assets/images/scopus.svg" alt="Scoups" style="height: 40px; width: 40px;">
                 </a>
                 <a href="https://scholar.google.com/citations?user=DyBfcIEAAAAJ&hl=it" target="_blank" class="me-3">
-                    <i class="fa-brands fa-google-scholar" style="font-size: 40px;" alt="Google Scholar"></i>
+                    <img src="assets/images/Google_Scholar_logo.svg" alt="Google Scholar" style="height: 40px; width: 40px;">
                 </a>
                 <a href="https://www.unisannio.it/it/users/daniele-bifolco" target="_blank" class="me-3">
-                    <i class="fas fa-graduation-cap" style="font-size: 40px; color: #4285f4;" alt="Unisannio"></i>
+                    <img src="assets/images/Logo_unisannio.png" alt="Unisannio" style="height: 40px; width: 40px;">
                 </a>
                 <a href="https://dblp.org/pid/378/0221.html" target="_blank">
-                    <i class="fas fa-database" style="font-size: 40px; color: #f39c12;" alt="dblp"></i>
+                    <img src="assets/images/dblp.svg" alt="Dblp" style="height: 40px; width: 40px;">
                 </a>
 
             </div>
