--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#research">Research</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#research">Publications</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contacts</a></li>
                 </ul>
@@ -47,10 +47,10 @@
                     <img src="assets/images/E99CC044-2.png" class="d-block w-100" alt="Slide 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/E99CC044.png" class="d-block w-100" alt="Slide 2">
+                    <img src="assets/images/A80F0006-9045-4BEE-AB3E-C13F3B9B3D7B2024-06-20_11-02-21_000.JPEG" class="d-block w-100" alt="Slide 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/E99CC044-2.png" class="d-block w-100" alt="Slide 3">
+                    <img src="assets/images/FD0FC2CA-C9BA-4332-ADEC-9B6744F545702023-07-28_11-41-26_065-2.jpeg" class="d-block w-100" alt="Slide 3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
@@ -61,9 +61,9 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
-            <div class="carousel-caption d-none d-md-block">
-                <h1>Benvenuto!</h1>
-                <p class="lead">Sono [Il Tuo Nome], dottorando in Ingegneria Informatica presso UniSannio.</p>
+            <div class="carousel-caption">
+                <h1>Welcome!</h1>
+                <p class="lead">I am Daniele Bifolco, a PhD student in Computer Engineering</p>
             </div>
         </div>
     </header>
@@ -71,15 +71,66 @@
     <!-- Chi Sono -->
     <section id="about" class="py-5">
         <div class="container" data-aos="fade-right">
-            <h2>Chi Sono</h2>
-            <p>Sono [Il Tuo Nome], dottorando presso l'Università del Sannio. I miei interessi principali includono...</p>
+            <div class="row align-items-center">
+                <div class="col-md-4">
+                    <div id="profileCarousel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="assets/images/0e9fa0a4-be57-4ed6-9d44-d5130075c66f.JPEG" alt="Daniele-Bifolco" class="d-block w-100 square-img ">
+                                <div class="carousel-caption" style="font-size:  0.7rem; bottom: 10px; width: 90%; padding: 1%;">
+                                    One of my favorite photos, sailing vacation
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/images/F5D0CA89-1B5A-4274-8286-5725BB7A4F0C2024-07-19_19-01-00_291.JPEG" alt="Mina" class="d-block w-100 square-img">
+                                <div class="carousel-caption" style="font-size:  0.7rem; bottom: 10px; width: 90%; padding: 1%;">
+                                    My doggie Mina
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/images/98B2ABCC-031E-4479-86F6-F8CFCAA1ED3F2022-05-10_21-43-50_094.png" alt="Music Live Show" class="d-block w-100 square-img">
+                                <div class="carousel-caption" style="font-size:  0.7rem; bottom: 10px; width: 90%; padding: 1%;">
+                                    Live music performance by one of my favorite singers
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#profileCarousel" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#profileCarousel" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <h2>About Me</h2>
+                    <p>
+                        Hi there! I’m Daniele Bifolco, a Ph.D. student in Information Technologies for Engineering at the University of Sannio, Benevento, Italy. My journey in tech began at the University of Salerno, where I earned my Bachelor’s Degree in Computer Engineering in 2020 and later my Master’s in Computer Science in 2023. I’ve been on an exciting path of discovery ever since, diving into the fascinating intersections of software, artificial intelligence, and everything in between.
+                    </p>
+                    <p>
+                        But there’s more to me than just research papers and code. I’m a passionate music enthusiast who believes every good line of code deserves a killer playlist. (Pro tip: classical for debugging, rock for breakthroughs!) Oh, and if it’s shiny and has an Apple logo on it, I probably already have it—or it’s on my wishlist. Consider me your local Apple aficionado.
+                    </p>
+                    <p>
+                        I also have a big love for traveling. Discovering new places, connecting with diverse cultures, and seeing the world through fresh perspectives are what keep my curiosity alive and my creativity flowing. Whether it’s strolling through historic cities or trying out local cuisines, I believe every journey adds a new melody to life’s playlist.
+                    </p>
+                    <p>
+                        When I’m not geeking out over AI or software engineering, you’ll find me experimenting with tech gadgets, exploring new music, or trying to convince people that yes, Macs are better.
+                    </p>
+                    <div class="social-icons">
+                        <a href="https://linkedin.com/in/daniele-bifolco" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/danielebifolco" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://twitter.com/BifolcoDaniele" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-
     <!-- Ricerca -->
     <section id="research" class="py-5 bg-light">
         <div class="container" data-aos="fade-left">
-            <h2>Ricerca</h2>
+            <h2>Publications</h2>
             <p>Qui troverai i dettagli dei miei lavori di ricerca e pubblicazioni.</p>
         </div>
     </section>
