--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <script>
         async function fetchPublications() {
             try {
-                const response = await fetch('https://cors-anywhere.herokuapp.com/https://serpapi.com/search.json?engine=google_scholar&author_id=DyBfcIEAAAAJ&hl&api_key=5cc4949cb648aeb87092a5ef91dd1bc2d53f752faab8100c562c7a1a0766a201');
+                const response = await fetch('https://serpapi.com/search.json?engine=google_scholar_author&author_id=DyBfcIEAAAAJ&api_key=5cc4949cb648aeb87092a5ef91dd1bc2d53f752faab8100c562c7a1a0766a201');
                 const data = await response.json();
                 const publicationsList = document.getElementById('publications-list');
                 
