Add Google site verification meta tag to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="tgFW-rFAILJ2E0byfmkxzk8mKuiPwwl7uTG3JK-Qrg8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal site of Daniele Bifolco, PhD student in Computer Engineering at the University of Sannio. Learn about my research projects, academic publications, scientific contributions and contact information.">
     <title>PhD Daniele Bifolco</title>
