Add new publication entry for ASE 2025 conference

--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
                     </a>2025 — R. D’Avino, S. Nocera, D. Bifolco, F. Pepe, M. Di Penta, G. Scanniello<br>
                     <em>Proceedings of the 29th International Conference on Evaluation and Assessment in Software Engineering (EASE)</em>
                 </li>
+                <li data-year="2025">
+                    <a href="https://arxiv.org/pdf/2510.01077" target="_blank">
+                    <strong>CodeGenLink: A Tool to Find the Likely Origin and License of Automatically Generated Code</strong><br>
+                    </a>2025 — D. Bifolco, G. Annicchiarico, P. Barbiero, M. Di Penta, F. Zampetti<br>
+                    <em>Proceedings of the 40th IEEE/ACM International Conference on Automated Software Engineering (ASE 2025)</em>
+                </li>
             </ul>
         </div>
     </section>
