Enhance publications section with icon links and improved styling

--- a/index.html
+++ b/index.html
@@ -173,11 +173,22 @@
                     </a>2025 — R. D’Avino, S. Nocera, D. Bifolco, F. Pepe, M. Di Penta, G. Scanniello<br>
                     <em>Proceedings of the 29th International Conference on Evaluation and Assessment in Software Engineering (EASE)</em>
                 </li>
-                <li data-year="2025">
-                    <a href="https://arxiv.org/pdf/2510.01077" target="_blank">
+                <li data-year="2025" class="pub-item has-icons">
+                <div class="pub-content">
+                    <a href="https://arxiv.org/pdf/2510.01077" target="_blank" class="pub-link">
                     <strong>CodeGenLink: A Tool to Find the Likely Origin and License of Automatically Generated Code</strong><br>
-                    </a>2025 — D. Bifolco, G. Annicchiarico, P. Barbiero, M. Di Penta, F. Zampetti<br>
+                    </a>
+                    2025 — D. Bifolco, G. Annicchiarico, P. Barbiero, M. Di Penta, F. Zampetti<br>
                     <em>Proceedings of the 40th IEEE/ACM International Conference on Automated Software Engineering (ASE 2025)</em>
+                </div>
+                <div class="pub-icons">
+                    <a href="https://github.com/danielebifolco/CodeGenLink" class="icon-link github-icon" target="_blank" aria-label="GitHub repository">
+                    <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=M6nqjBf9_pw" class="icon-link youtube-icon" target="_blank" aria-label="YouTube video">
+                    <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
                 </li>
             </ul>
         </div>
