Refactor index.html by removing commented sections and updating committee memberships

--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
         </div>
     </header>
 
-    <!-- Chi Sono -->
     <section id="about" class="py-5">
         <div class="container" data-aos="fade-right">
             <div class="row align-items-center">
@@ -210,24 +209,22 @@
     items.forEach(item => list.appendChild(item));
   });
 </script>
-    
-
-    <!-- Progetti -->
-    <section id="services" class="py-5">
+        <section id="services" class="py-5">
       <div class="container" data-aos="fade-up">
         <h2>Committee Memberships</h2>
         <ul>
-          <li><strong>42nd International Conference on Software Maintenance and Evolution (ICSME26)</strong><br>
+            <li><strong>42nd International Conference on Software Maintenance and Evolution (ICSME26)</strong><br>
             Web Chair in Organizing Committee</li>
-          <li><strong>International Workshop on Analytics for Software Product and Process Improvement (A-SPPI25)</strong> <br>
+            <li><strong>International Workshop on Analytics for Software Product and Process Improvement (A-SPPI25)</strong> <br>
              Committee Member in Program Committee</li>
+            <li><strong>ACM Transactions on Software Engineering and Methodology (TOSEM)</strong> <br>
+             Involved as Reviewer</li>
         </ul>
       </div>
     </section>
         </div>
     </section>
 
-    <!-- Contatti -->
     <section id="contact" class="py-5 bg-light">
         <div class="container" data-aos="fade-up">
             <h2>Contacts</h2>
@@ -262,7 +259,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="text-center py-4 bg-dark text-white">
         <p>© 2024 Daniele Bifolco. All rights reserved.</p>
     </footer>
