Update publication entries in index.html to emphasize author contributions

--- a/index.html
+++ b/index.html
@@ -145,31 +145,31 @@
                 <li data-year="2024">
                     <a href="https://dl.acm.org/doi/pdf/10.1145/3661167.3661175" target="_blank">
                     <strong>On the Accuracy of GitHub's Dependency Graph</strong><br>
-                    </a>2024 — D. Bifolco, S. Nocera, S. Romano, M. Di Penta, R. Francese, G. Scanniello<br>
+                    </a>2024 — <b>D. Bifolco</b>, S. Nocera, S. Romano, M. Di Penta, R. Francese, G. Scanniello<br>
                     <em>Proceedings of the 28th International Conference on Evaluation and Assessment in Software Engineering (EASE)</em>
                 </li>
                 <li data-year="2024">
                     <a href="https://dl.acm.org/doi/pdf/10.1145/3674805.3695390" target="_blank">
                     <strong>MSR4SBOM: Mining Software Repositories for Enhanced Software Bills of Materials</strong><br>
-                    </a>2024 — G. Scanniello, M. Di Penta, S. Romano, R. Francese, S. Nocera, P. Cassieri, D. Bifolco, F. Zampetti <br>
+                    </a>2024 — G. Scanniello, M. Di Penta, S. Romano, R. Francese, S. Nocera, P. Cassieri, <b>D. Bifolco</b>, F. Zampetti <br>
                     <em>18th ACM/IEEE International Symposium on Empirical Software Engineering and Measurement (ESEM)</em>
                 </li>
                 <li data-year="2025">
                     <a href="https://www.sciencedirect.com/science/article/pii/S0950584925001934" target="_blank">
                     <strong>An empirical study on the accuracy of GitHub’s dependency graph and the nature of its inaccuracy</strong><br>
-                    </a>2025 — D. Bifolco, S. Romano, S. Nocera, R. Francese, G. Scanniello, M. Di Penta<br>
+                    </a>2025 — <b>D. Bifolco</b>, S. Romano, S. Nocera, R. Francese, G. Scanniello, M. Di Penta<br>
                     <em>Information and Software Technology (IST)</em>
                 </li>
                 <li data-year="2025">
                     <a href="https://ieeexplore.ieee.org/abstract/document/11025675" target="_blank">
                     <strong>Do LLMs provide links to code similar to what they generate? A Study with Gemini and Bing CoPilot</strong><br>
-                    </a>2025 — D. Bifolco, P. Cassieri, G. Scanniello, M. Di Penta, F. Zampetti<br>
+                    </a>2025 — <b>D. Bifolco</b>, P. Cassieri, G. Scanniello, M. Di Penta, F. Zampetti<br>
                     <em>22nd IEEE/ACM International Conference on Mining Software Repositories (MSR)</em>
                 </li>
                 <li data-year="2025">
                     <a href="https://sabato-nocera.github.io/files/ease2025.pdf" target="_blank">
                     <strong>ALOHA: A (IBoM) tooL generatOr for Hugging fAce</strong><br>
-                    </a>2025 — R. D’Avino, S. Nocera, D. Bifolco, F. Pepe, M. Di Penta, G. Scanniello<br>
+                    </a>2025 — R. D’Avino, S. Nocera, <b>D. Bifolco</b>, F. Pepe, M. Di Penta, G. Scanniello<br>
                     <em>Proceedings of the 29th International Conference on Evaluation and Assessment in Software Engineering (EASE)</em>
                 </li>
                 <li data-year="2025" class="pub-item has-icons">
@@ -177,7 +177,7 @@
                     <a href="https://arxiv.org/pdf/2510.01077" target="_blank" class="pub-link">
                     <strong>CodeGenLink: A Tool to Find the Likely Origin and License of Automatically Generated Code</strong><br>
                     </a>
-                    2025 — D. Bifolco, G. Annicchiarico, P. Barbiero, M. Di Penta, F. Zampetti<br>
+                    2025 — <b>D. Bifolco</b>, G. Annicchiarico, P. Barbiero, M. Di Penta, F. Zampetti<br>
                     <em>Proceedings of the 40th IEEE/ACM International Conference on Automated Software Engineering (ASE 2025)</em>
                 </div>
                 <div class="pub-icons">
