Update committee memberships in index.html to reflect new roles and contributions

--- a/index.html
+++ b/index.html
@@ -213,12 +213,16 @@
       <div class="container" data-aos="fade-up">
         <h2>Committee Memberships</h2>
         <ul>
+            <li><strong>42nd International Conference on Software Maintenance and Evolution (ICSME26) - Tool Demo and Data Showcase Track</strong><br>
+            Committee Member in Program Committee</li>
             <li><strong>42nd International Conference on Software Maintenance and Evolution (ICSME26)</strong><br>
             Web Chair in Organizing Committee</li>
-            <li><strong>International Workshop on Analytics for Software Product and Process Improvement (A-SPPI25)</strong> <br>
-             Committee Member in Program Committee</li>
             <li><strong>ACM Transactions on Software Engineering and Methodology (TOSEM)</strong> <br>
              Involved as Reviewer</li>
+            <li><strong>International Workshop on Analytics for Software Product and Process Improvement (A-SPPI25)</strong> <br>
+             Committee Member in Program Committee</li>
+            <li><strong>1st International Workshop on AI Code QUality, Integrity & REliability (ACQUIRE 2026)</strong> <br>
+             Committee Member in Program Committee</li>
         </ul>
       </div>
     </section>
